--- a/pusat/support/help.html
+++ b/pusat/support/help.html
@@ -140,10 +140,10 @@
             </ul>
         </div>
     </aside>
-    <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-6">
+    <div class="p-2 sm:p-4 sm:ml-64 mt-14">
+        <div class="p-2 sm:p-6">
             <!-- Breadcrumb -->
-            <nav class="flex mb-6" aria-label="Breadcrumb">
+            <nav class="flex mb-4 sm:mb-6" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="/pusat/index.html"
@@ -191,8 +191,8 @@
                     <p class="text-sm text-gray-600">support@edulearn.com</p>
                 </div>
             </div>
-            <div class="bg-white rounded-lg p-6 shadow-sm">
-                <h2 class="text-xl font-bold text-gray-900 mb-4">Pertanyaan Umum</h2>
+            <div class="bg-white rounded-lg p-4 sm:p-6 shadow-sm">
+                <h2 class="text-lg sm:text-xl font-bold text-gray-900 mb-3 sm:mb-4">Pertanyaan Umum</h2>
                 <div class="space-y-4">
                     <details class="border rounded-lg">
                         <summary class="px-4 py-3 cursor-pointer font-medium text-gray-900 hover:bg-gray-50">Bagaimana
