--- a/pusat/susun/index.html
+++ b/pusat/susun/index.html
@@ -346,8 +346,8 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-6">
+    <div class="p-2 sm:p-4 sm:ml-64 mt-14">
+        <div class="p-2 sm:p-6">
 
             <!-- Breadcrumb -->
             <nav class="flex mb-4 md:mb-6 overflow-x-auto" aria-label="Breadcrumb">
