--- a/user/biasa/courses/my-courses.html
+++ b/user/biasa/courses/my-courses.html
@@ -155,10 +155,10 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-6">
+    <div class="p-2 sm:p-4 sm:ml-64 mt-14">
+        <div class="p-2 sm:p-6">
                         <!-- Breadcrumb -->
-            <nav class="flex mb-6" aria-label="Breadcrumb">
+            <nav class="flex mb-4 sm:mb-6" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="../../index.html"
@@ -186,7 +186,7 @@
             <!-- Filter Tabs -->
             <div class="mb-6">
                 <div class="border-b border-gray-200">
-                    <nav class="flex space-x-8">
+                    <nav class="flex space-x-4 sm:space-x-8 overflow-x-auto pb-2 scrollbar-hide">
                         <button onclick="filterCourses('all')" data-filter="all"
                             class="filter-tab border-b-2 border-indigo-600 text-indigo-600 py-3 px-1 text-sm font-semibold">Semua
                             Kursus (6)</button>
@@ -204,7 +204,7 @@
             </div>
 
             <!-- Courses Grid -->
-            <div id="courses-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div id="courses-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">
                 <!-- Course Card 1 - SELESAI -->
                 <div data-status="sudah-selesai"
                     class="course-card bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
@@ -373,7 +373,7 @@
             <div id="certificates-grid" class="hidden grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Certificate 1 -->
                 <div
-                    class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
+                    class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden sm:bg-white transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
                     <!-- Certificate Image -->
                     <img src="https://picsum.photos/seed/cert-macro/600/400"
                         alt="Sertifikat Perencanaan Tenaga Kerja Makro" class="w-full h-48 object-cover">
@@ -405,7 +405,7 @@
 
                 <!-- Certificate 2 -->
                 <div
-                    class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
+                    class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden sm:bg-white transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
                     <!-- Certificate Image -->
                     <img src="https://picsum.photos/seed/cert-micro/600/400"
                         alt="Sertifikat Perencanaan Tenaga Kerja Mikro" class="w-full h-48 object-cover">
