--- a/kab-kota/laporan/index.html
+++ b/kab-kota/laporan/index.html
@@ -155,11 +155,11 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-6">
+    <div class="p-2 sm:p-4 sm:ml-64 mt-14">
+        <div class="p-2 sm:p-6">
 
             <!-- Breadcrumb -->
-            <nav class="flex mb-6" aria-label="Breadcrumb">
+            <nav class="flex mb-4 sm:mb-6" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="../index.html"
@@ -185,13 +185,13 @@
             </nav>
 
             <!-- Two Column Layout 6:6 -->
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 sm:gap-6">
 
                 <!-- Left Column (6/12) -->
                 <div class="space-y-6">
 
                     <!-- RTK Status Card -->
-                    <div class="bg-white rounded-lg p-6 shadow-sm">
+                    <div class="bg-white rounded-lg p-4 sm:p-6 shadow-sm">
                         <h2 class="text-2xl font-bold text-gray-900 mb-2">Kabupaten Kepulauan Siau Tagulandang Biaro
                         </h2>
                         <p class="text-gray-600 mb-4">Kabupaten/Kota Administrasi</p>
@@ -208,7 +208,7 @@
                     </div>
 
                     <!-- Masa Berlaku RTK -->
-                    <div class="bg-white rounded-lg p-6 shadow-sm">
+                    <div class="bg-white rounded-lg p-4 sm:p-6 shadow-sm">
                         <h3 class="text-lg font-bold text-gray-900 mb-4">Masa Berlaku RTK</h3>
 
                         <!-- Date Cards -->
