--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -157,11 +157,11 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-6">
+    <div class="p-2 sm:p-4 sm:ml-64 mt-14">
+        <div class="p-2 sm:p-6">
 
             <!-- Breadcrumb -->
-            <nav class="flex mb-6" aria-label="Breadcrumb">
+            <nav class="flex mb-4 sm:mb-6" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="./index.html"
@@ -207,9 +207,9 @@
             </div>
 
             <!-- Pie Charts Grid -->
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 sm:gap-6">
                 <!-- Left Card: Gender Distribution Pie Chart -->
-                <div class="bg-white rounded-lg p-6 shadow-sm">
+                <div class="bg-white rounded-lg p-4 sm:p-6 shadow-sm">
                     <h2 class="text-xl font-bold text-gray-900 mb-6">Perbandingan Jenis Kelamin</h2>
                     <div class="h-80 flex items-center justify-center">
                         <canvas id="genderPieChart"></canvas>
@@ -217,7 +217,7 @@
                 </div>
 
                 <!-- Right Card: Module Distribution Pie Chart -->
-                <div class="bg-white rounded-lg p-6 shadow-sm">
+                <div class="bg-white rounded-lg p-4 sm:p-6 shadow-sm">
                     <h2 class="text-xl font-bold text-gray-900 mb-6">Perbandingan Modul yang Diambil</h2>
                     <div class="h-80 flex items-center justify-center">
                         <canvas id="modulePieChart"></canvas>
