--- a/superadmin/user/profile.html
+++ b/superadmin/user/profile.html
@@ -210,7 +210,7 @@
                     <div>
                         <h2 class="text-xl font-bold text-gray-900 mb-2">Ubah Password</h2>
                         <p class="text-sm text-gray-600 mb-6">Kosongkan jika tidak ingin mengubah password</p>
-                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 sm:gap-6">
 
 
                             <!-- Password -->
