--- a/user/biasa/courses/course-learning.html
+++ b/user/biasa/courses/course-learning.html
@@ -153,10 +153,10 @@
         </div>
     </aside>
 
-    <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-6">
+    <div class="p-2 sm:p-4 sm:ml-64 mt-14">
+        <div class="p-2 sm:p-6">
                         <!-- Breadcrumb -->
-            <nav class="flex mb-6" aria-label="Breadcrumb">
+            <nav class="flex mb-4 sm:mb-6" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="../../index.html"
@@ -202,7 +202,7 @@
             <!-- Filter Tabs -->
             <div class="mb-6">
                 <div class="border-b border-gray-200">
-                    <nav class="flex space-x-8">
+                    <nav class="flex space-x-4 sm:space-x-8 overflow-x-auto pb-2 scrollbar-hide">
                         <button onclick="filterModules('all')" id="filter-all"
                             class="filter-tab border-b-2 border-indigo-600 text-indigo-600 py-3 px-1 text-sm font-semibold">
                             Semua (3)
