--- a/user/biasa/user/profile.html
+++ b/user/biasa/user/profile.html
@@ -157,8 +157,8 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="p-2 sm:p-3 sm:ml-64 mt-10">
-        <div class="p-4 sm:p-6">
+    <div class="p-2 sm:p-3 sm:ml-64 mt-14 sm:mt-14">
+        <div class="p-2 sm:p-7">
             <!-- Breadcrumb -->
             <nav class="flex mb-4" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1">
