--- a/kab-kota/susun/index.html
+++ b/kab-kota/susun/index.html
@@ -338,11 +338,11 @@
             </nav>
 
             <!-- DataTable Card -->
-            <div class="bg-white rounded-lg shadow-sm p-4 md:p-6">
+            <div class="bg-white rounded-lg shadow-sm p-3 sm:p-4 md:p-6">
                 <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center gap-3 mb-4">
-                    <h2 class="text-lg font-semibold text-gray-900">Daftar Proyek RTKD</h2>
+                    <h2 class="text-base sm:text-lg font-semibold text-gray-900">Daftar Proyek RTKD</h2>
                     <a href="./create.html"
-                        class="inline-flex items-center justify-center px-4 py-2 bg-indigo-600 text-white text-sm font-medium rounded-lg hover:bg-indigo-700 transition-colors">
+                        class="inline-flex items-center justify-center px-3 sm:px-4 py-2 bg-indigo-600 text-white text-xs sm:text-sm font-medium rounded-lg hover:bg-indigo-700 transition-colors whitespace-nowrap">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
                         </svg>
@@ -371,10 +371,10 @@
 
     <!-- PDF Modal -->
     <div id="pdfModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
-        <div class="bg-white rounded-lg shadow-xl w-full max-w-4xl h-3/4 flex flex-col">
+        <div class="bg-white rounded-lg shadow-xl w-full max-w-4xl h-[85vh] sm:h-3/4 flex flex-col">
             <!-- Modal Header -->
             <div class="flex justify-between items-center p-4 border-b">
-                <h3 id="modalTitle" class="text-lg font-semibold text-gray-900"></h3>
+                <h3 id="modalTitle" class="text-base sm:text-lg font-semibold text-gray-900"></h3>
                 <button onclick="closeModal()" class="text-gray-400 hover:text-gray-600 transition-colors">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
