--- a/superadmin/index.html
+++ b/superadmin/index.html
@@ -224,7 +224,7 @@
                                     d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z">
                                 </path>
                             </svg>
-                            
+
                         </a>
                     <li>
                         <div class="flex items-center">
@@ -240,13 +240,13 @@
             </nav>
 
             <!-- Quick Stats Cards -->
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-5 mb-8 stats-grid">
+            <div class="grid grid-cols-2 lg:grid-cols-4 gap-3 sm:gap-4 md:gap-5 mb-6 sm:mb-8 stats-grid">
                 <!-- Total Admin Pusat -->
                 <div class="bg-white rounded-xl shadow-sm border p-4 md:p-5 card-hover">
                     <div class="flex items-center justify-between mb-3 md:mb-4">
                         <div>
                             <p class="text-sm text-gray-500 font-medium">Total Admin Pusat</p>
-                            <h3 class="text-2xl font-bold text-gray-900 mt-1">12</h3>
+                            <h3 class="text-lg sm:text-2xl font-bold text-gray-900 mt-1">12</h3>
                         </div>
                         <div class="p-2 md:p-3 rounded-full gradient-indigo">
                             <i class="fas fa-users text-white text-base md:text-lg"></i>
@@ -268,7 +268,7 @@
                     <div class="flex items-center justify-between mb-3 md:mb-4">
                         <div>
                             <p class="text-sm text-gray-500 font-medium">Admin Aktif</p>
-                            <h3 class="text-2xl font-bold text-emerald-600 mt-1">10</h3>
+                            <h3 class="text-lg sm:text-2xl font-bold text-emerald-600 mt-1">10</h3>
                         </div>
                         <div class="p-2 md:p-3 rounded-full gradient-emerald">
                             <i class="fas fa-user-check text-white text-base md:text-lg"></i>
@@ -288,7 +288,7 @@
                     <div class="flex items-center justify-between mb-3 md:mb-4">
                         <div>
                             <p class="text-sm text-gray-500 font-medium">Admin Nonaktif</p>
-                            <h3 class="text-2xl font-bold text-amber-600 mt-1">2</h3>
+                            <h3 class="text-lg sm:text-2xl font-bold text-amber-600 mt-1">2</h3>
                         </div>
                         <div class="p-2 md:p-3 rounded-full gradient-amber">
                             <i class="fas fa-user-slash text-white text-base md:text-lg"></i>
@@ -307,7 +307,7 @@
                     <div class="flex items-center justify-between mb-3 md:mb-4">
                         <div>
                             <p class="text-sm text-gray-500 font-medium">Aktivitas Admin</p>
-                            <h3 class="text-2xl font-bold text-rose-600 mt-1">247</h3>
+                            <h3 class="text-lg sm:text-2xl font-bold text-rose-600 mt-1">247</h3>
                         </div>
                         <div class="p-2 md:p-3 rounded-full gradient-rose">
                             <i class="fas fa-chart-line text-white text-base md:text-lg"></i>
@@ -326,7 +326,7 @@
             </div>
 
             <!-- Main Dashboard Content -->
-            <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-6">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 sm:gap-6 mb-4 sm:mb-6">
                 <!-- Event Penting -->
                 <div class="lg:col-span-2">
                     <div class="bg-white rounded-xl shadow-sm border p-4 md:p-6 h-full">
@@ -671,7 +671,7 @@
 
     <script>
         // Mobile Sidebar Toggle with Backdrop
-        (function() {
+        (function () {
             const sidebarToggleBtn = document.querySelector('[data-drawer-toggle="sidebar"]');
             const sidebar = document.getElementById('top-bar-sidebar');
 
