--- a/pusat/susun/create.html
+++ b/pusat/susun/create.html
@@ -308,13 +308,13 @@
             </nav>
 
             <!-- Form Card -->
-            <div class="bg-white rounded-lg shadow-sm p-8 max-w-2xl mx-auto">
-                <div class="mb-6">
-                    <h1 class="text-2xl font-bold text-gray-900">Tambah Proyek RTKN Baru</h1>
-                    <p class="text-gray-600 mt-1">Buat proyek RTKN baru dengan mengisi form di bawah ini</p>
+            <div class="bg-white rounded-lg shadow-sm p-4 sm:p-8 max-w-2xl mx-auto">
+                <div class="mb-4 sm:mb-6">
+                    <h1 class="text-lg sm:text-2xl font-bold text-gray-900">Tambah Proyek RTKN Baru</h1>
+                    <p class="text-gray-600 mt-1 text-sm sm:text-base">Buat proyek RTKN baru dengan mengisi form di bawah ini</p>
                 </div>
 
-                <form id="createProyekForm" class="space-y-6">
+                <form id="createProyekForm" class="space-y-4 sm:space-y-6">
                     <!-- Nama Proyek -->
                     <div>
                         <label for="proyekName" class="block text-sm font-medium text-gray-700 mb-2">
@@ -385,13 +385,13 @@
                     </div>
 
                     <!-- Action Buttons -->
-                    <div class="flex gap-4 pt-4">
+                    <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 pt-4">
                         <a href="./index.html"
-                            class="flex-1 bg-gray-200 text-gray-700 px-6 py-3 rounded-lg font-medium hover:bg-gray-300 transition-colors text-center">
+                            class="flex-1 bg-gray-200 text-gray-700 px-4 sm:px-6 py-2.5 sm:py-3 rounded-lg font-medium hover:bg-gray-300 transition-colors text-center">
                             Batal
                         </a>
                         <button type="submit"
-                            class="flex-1 bg-indigo-600 text-white px-6 py-3 rounded-lg font-medium hover:bg-indigo-700 transition-colors">
+                            class="flex-1 bg-indigo-600 text-white px-4 sm:px-6 py-2.5 sm:py-3 rounded-lg font-medium hover:bg-indigo-700 transition-colors">
                             <svg class="w-5 h-5 inline mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M5 13l4 4L19 7" />
